--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Poppins:wght@400;500;700&display=swap"
-      rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Poppins:wght@400;500;700&display=swap"
+    rel="stylesheet"
     />
     <link rel="stylesheet" href="./src/assets/main.css" />
+    <script src="https://kit.fontawesome.com/414c4b498a.js" crossorigin="anonymous"></script>
     <title>Paqueta Store</title>
   </head>
   <body class="bg-white">
