--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="https://kit.fontawesome.com/414c4b498a.js" crossorigin="anonymous"></script>
     <title>Paqueta Store</title>
   </head>
-  <body class="bg-white">
+  <body class="bg-white relative">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
