--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Poppins:wght@400;500;700&display=swap"
     rel="stylesheet"
     />
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
     <link rel="stylesheet" href="./src/assets/main.css" />
     <script src="https://kit.fontawesome.com/414c4b498a.js" crossorigin="anonymous"></script>
     <title>Paqueta Store</title>
